<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/editTypeDropDownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:text="@string/label_todo_type"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/editTypeDropDown"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_margin="4dp"
        android:background="#AAAAAA"
        android:padding="10dip"
        android:spinnerMode="dropdown"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTypeDropDownLabel" />

    <TextView
        android:id="@+id/editTodoTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:text="@string/label_todo_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTypeDropDown" />

    <EditText
        android:id="@+id/editTodoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/cardview_shadow_start_color"
        android:padding="6dip"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTodoTitleLabel" />

    <TextView
        android:id="@+id/editTodoDescLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:text="@string/label_todo_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTodoTitle" />

    <EditText
        android:id="@+id/editTodoDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="top|left"
        android:lines="3"
        android:padding="6dip"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTodoDescLabel" />

    <TextView
        android:id="@+id/editPriorityDropDownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:text="@string/label_todo_priority"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTodoDesc" />

    <Spinner
        android:id="@+id/editPriorityDropDown"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_margin="4dp"
        android:background="#AAAAAA"
        android:padding="10dip"
        android:spinnerMode="dropdown"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPriorityDropDownLabel" />

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPriorityDropDown" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSaveButton" />

    <Button
        android:id="@+id/editBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/button_back_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareButton" />



</androidx.constraintlayout.widget.ConstraintLayout>